--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
         android:layout_height="match_parent"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:orientation="horizontal"
-        android:background="@drawable/backgroud"
+        android:background="@drawable/background_gradient"
         tools:context=".SearchActivity">
 
     <LinearLayout
@@ -23,7 +23,7 @@
                 android:iconifiedByDefault="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/search_box_border"
+                android:background="@drawable/bg_round"
                 android:focusable="true"
                 android:animationCache="true"/>
     </LinearLayout>
