--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:isScrollContainer="true"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -63,12 +64,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
-            <LinearLayout
+            <TextView
                     android:id="@+id/videoAuthor"
+                    android:textColor="@color/white_90"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-            </LinearLayout>
+                    android:layout_height="wrap_content"/>
 
             <TextView
                     android:layout_gravity="center"
@@ -85,13 +87,13 @@
                     android:maxLines="3"
             />
 
-
-            <LinearLayout
+            <TextView
                     android:id="@+id/VideoTag"
+                    android:textColor="@color/white_90"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-            </LinearLayout>
+                    android:layout_height="wrap_content"/>
 
             <Button
                     android:id="@+id/btnfullScreen"
@@ -120,7 +122,6 @@
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
             android:fadingEdge="vertical">
-
         <LinearLayout
                 android:isScrollContainer="true"
                 android:id="@+id/showList"
