--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="colorPrimaryDark">#4DADCA</color>
     <color name="colorAccent">#009688</color>
 
+    <color name="colorText">@color/white_70</color>
+    <color name="colorTextSelected">@color/yellow_90</color>
+    <color name="colorBackgroundBox">@color/white_20</color>
+    <color name="colorBackgroundFocused">@color/blue</color>
+
     <color name="white">#FFFFFF</color>
     <color name="lightskyblue">#87CEFA</color>
     <color name="greenyellow">#ADFF2F</color>
