--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,13 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <declare-styleable name="ListTextView">
-        <attr name="num"/>
+    <declare-styleable name="ScrollViewList">
+        <attr name="showItemNum" format="integer"/>
+        <attr name="itemResId" format="reference"/>
+        <attr name="itemViewType">
+            <enum name="TextView" value="0"></enum>
+            <enum name="TextView_Readonly" value="1"></enum>
+        </attr>
     </declare-styleable>
 
 </resources>
