--- a/app/src/main/res/layout/widget_scroll_view.xml
+++ b/app/src/main/res/layout/widget_scroll_view.xml
@@ -13,7 +13,8 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white_90"
             android:paddingRight="10dp"
-            android:focusable="false"/>
+            android:focusable="false"
+            android:visibility="gone"/>
     <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
