--- a/app/src/main/res/layout/activity_picker.xml
+++ b/app/src/main/res/layout/activity_picker.xml
@@ -4,6 +4,10 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:orientation="vertical"
         android:background="@drawable/background_gradient"
         tools:context=".PickerActivity">
