--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -97,9 +97,9 @@
 
             <Button
                     android:id="@+id/btnfullScreen"
-                    android:layout_width="80dp"
-                    android:layout_height="40dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_width="60dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="10dp"
                     android:background="@drawable/button_select"
                     android:textColor="@color/white_70"
                     android:text="全屏"/>
