--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,13 @@
     <color name="white_90">#E6FFFFFF</color>
     <color name="yellow_90">#E6FFEB3B</color>
 
+    <color name="app_text_light">#FAFAFA</color>
+    <color name="app_button_inactive">#FAFAFA</color>
+
+    <color name="app_dark_curtain_0">#1A000000</color>
+    <color name="app_dark_curtain_1">#40000000</color>
+    <color name="app_dark_curtain_2">#60000000</color>
+    <color name="app_dark_curtain_3">#80000000</color>
+    <color name="app_dark_curtain_4">#A0000000</color>
+    <color name="app_dark_curtain_5">#C0000000</color>
 </resources>
