--- a/app/src/main/res/layout/playback_activity.xml
+++ b/app/src/main/res/layout/playback_activity.xml
@@ -7,9 +7,8 @@
 
     <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/VideoViewfull2"
-            android:background="@color/white"
-            android:layout_width="400dp"
-            android:layout_height="300dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center">
     </com.google.android.exoplayer2.ui.PlayerView>
 
@@ -17,7 +16,6 @@
             android:id="@+id/pb_playerControlView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
             android:elevation="500dp"/>
 
     <com.github.ybq.android.spinkit.SpinKitView
