--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="margin_small">4dp</dimen>
+    <dimen name="border_small">2dp</dimen>
+
     <dimen name="h_1">1.0px</dimen>
     <dimen name="h_2">2.0px</dimen>
     <dimen name="h_3">3.0px</dimen>
