--- a/app/src/main/res/layout/widget_scroll_view.xml
+++ b/app/src/main/res/layout/widget_scroll_view.xml
@@ -23,6 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:isScrollContainer="true"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 android:orientation="horizontal">
         </LinearLayout>
     </HorizontalScrollView>
