--- a/app/src/main/res/layout/playback_exoplayer_controls_layout.xml
+++ b/app/src/main/res/layout/playback_exoplayer_controls_layout.xml
@@ -33,6 +33,19 @@
                 android:textStyle="bold"
                 android:visibility="visible"
                 tools:ignore="HardcodedText,RtlHardcoded"/>
+
+        <TextView
+                android:id="@+id/pb_streamTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text=""
+                android:textAllCaps="false"
+                android:textColor="@color/app_text_light"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:visibility="visible"
+                tools:ignore="HardcodedText,RtlHardcoded"/>
     </RelativeLayout>
 
     <!-- play/pause button -->
