--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,32 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-        <RelativeLayout
+
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:id="@+id/liveTvAction"
+                android:text="●●●"
+                android:textColor="@color/white_70"
+                android:textSize="6dp"
+                android:textAlignment="center"
+                android:nextFocusDown="@id/searchAction"
+                android:focusable="true"
+                android:background="@drawable/textview_action_select">
+        </TextView>
+
+        <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp">
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:paddingLeft="10dp">
             <TextView
                     android:id="@+id/searchAction"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
+                    android:nextFocusUp="@id/liveTvAction"
+                    android:nextFocusDown="@id/navTab"
                     android:iconifiedByDefault="false"
                     android:text="搜索"
                     android:textSize="15sp"
@@ -36,12 +54,13 @@
                     android:gravity="center"
                     android:focusable="true"
                     android:background="@drawable/search_border_select"/>
-        </RelativeLayout>
+        </LinearLayout>
         <com.owen.tab.TvTabLayout
                 android:id="@+id/navTab"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:nextFocusUp="@id/searchAction"
 
                 app:tabIndicatorHeight="0dp"
                 app:tabIndicatorBackgroundHeight="0dp"
