--- a/app/src/main/res/layout/playback_activity.xml
+++ b/app/src/main/res/layout/playback_activity.xml
@@ -6,7 +6,7 @@
              android:gravity="center">
 
     <com.google.android.exoplayer2.ui.PlayerView
-            android:id="@+id/VideoViewfull2"
+            android:id="@+id/liveVideoView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
