--- a/app/src/main/res/layout/playback_controls_bar.xml
+++ b/app/src/main/res/layout/playback_controls_bar.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:text="title"
+                android:text=""
                 android:textAllCaps="false"
                 android:textColor="@color/app_text_light"
                 android:textSize="18sp"
