--- a/app/src/main/res/layout/playback_control_view.xml
+++ b/app/src/main/res/layout/playback_control_view.xml
@@ -21,24 +21,31 @@
             tools:ignore="HardcodedText"/>
 
     <!-- 频道 -->
-    <ScrollView
+    <com.hxgz.chuantv.widget.PlayerTvListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="@drawable/controls_vignette"
-            android:focusable="false"
             android:visibility="invisible"
-            android:scrollbars="none"
-            android:fadingEdge="vertical">
+            android:id="@+id/showTvListView">
 
-        <LinearLayout
-                android:isScrollContainer="true"
-                android:id="@+id/showTvList"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-        </LinearLayout>
-    </ScrollView>
+    </com.hxgz.chuantv.widget.PlayerTvListView>
+    <!--    <ScrollView-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_margin="5dp"-->
+    <!--            android:background="@drawable/controls_vignette"-->
+    <!--            android:focusable="false"-->
+    <!--            android:visibility="invisible"-->
+    <!--            android:scrollbars="none"-->
+    <!--            android:fadingEdge="vertical">-->
+
+    <!--        <LinearLayout-->
+    <!--                android:isScrollContainer="true"-->
+    <!--                android:id="@+id/showTvList"-->
+    <!--                android:layout_width="wrap_content"-->
+    <!--                android:layout_height="match_parent"-->
+    <!--                android:orientation="vertical">-->
+    <!--        </LinearLayout>-->
+    <!--    </ScrollView>-->
     <!-- 控制条 -->
     <com.hxgz.chuantv.widget.PlayerControlBar
             android:id="@+id/ctl_playercontrols"
