扩展部分功能，修复部分bug

--- a/app/src/main/res/layout/widget_scroll_view.xml
+++ b/app/src/main/res/layout/widget_scroll_view.xml
@@ -17,7 +17,8 @@
             android:visibility="gone"/>
     <HorizontalScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:scrollbars="none">
         <LinearLayout
                 android:id="@+id/itemLayout"
                 android:layout_width="match_parent"
