--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,18 +22,18 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:id="@+id/liveTvAction"
-                android:text="●●●"
-                android:textColor="@color/white_70"
-                android:textSize="6dp"
-                android:textAlignment="center"
-                android:nextFocusDown="@id/searchAction"
-                android:focusable="true"
-                android:background="@drawable/textview_action_select">
-        </TextView>
+        <!--        <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="1dp"-->
+        <!--                android:id="@+id/liveTvAction"-->
+        <!--                android:text="●●●"-->
+        <!--                android:textColor="@color/white_70"-->
+        <!--                android:textSize="6dp"-->
+        <!--                android:textAlignment="center"-->
+        <!--                android:nextFocusDown="@id/searchAction"-->
+        <!--                android:focusable="true"-->
+        <!--                android:background="@drawable/textview_action_select">-->
+        <!--        </TextView>-->
 
         <LinearLayout
                 android:layout_width="match_parent"
@@ -45,7 +45,6 @@
                     android:id="@+id/searchAction"
                     android:layout_width="90dp"
                     android:layout_height="wrap_content"
-                    android:nextFocusUp="@id/liveTvAction"
                     android:nextFocusDown="@id/navTab"
                     android:iconifiedByDefault="false"
                     android:text="搜索"
