--- a/app/src/main/res/layout/image_card_view.xml
+++ b/app/src/main/res/layout/image_card_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.hxgz.chuantv.widget.ImageCardView.OpenCardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@color/white"
+        android:background="@drawable/controls_vignette"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:layout_margin="12dp"
@@ -11,14 +11,38 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
-    <TextView
-            android:id="@+id/title_tv"
-            android:text="测试"
-            android:textColor="@color/black"
-            android:background="@color/white_70"
-            android:layout_gravity="bottom"
-            android:gravity="center"
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:orientation="vertical">
+
+        <TextView
+                android:id="@+id/status_tv"
+                android:text=""
+                android:textColor="@color/white"
+                android:background="@color/golden"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/h_8"
+                android:layout_marginBottom="@dimen/h_8"
+                android:layout_marginRight="@dimen/h_8"
+                android:padding="@dimen/h_4"
+                android:visibility="invisible"
+                android:maxLines="1"/>
+
+        <TextView
+                android:id="@+id/title_tv"
+                android:text=""
+                android:textColor="@color/black"
+                android:background="@color/white_70"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </com.hxgz.chuantv.widget.ImageCardView.OpenCardView>
