--- a/app/src/main/res/layout/item_recyclerview_view.xml
+++ b/app/src/main/res/layout/item_recyclerview_view.xml
@@ -17,18 +17,42 @@
             android:scaleType="fitXY">
     </ImageView>
 
-    <TextView
-            android:id="@+id/textView"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:gravity="center"
-            android:text="item1"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:background="@color/white_70"
-            android:singleLine="false"
-            android:ellipsize="end"
-            android:maxLines="3"/>
+            android:orientation="vertical">
 
+        <TextView
+                android:id="@+id/statusView"
+                android:text=""
+                android:textColor="@color/white"
+                android:background="@color/golden"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/h_8"
+                android:layout_marginBottom="@dimen/h_8"
+                android:layout_marginRight="@dimen/h_8"
+                android:padding="@dimen/h_4"
+                android:visibility="invisible"
+                android:maxLines="1"/>
+
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:gravity="center"
+                android:text=""
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:background="@color/white_70"
+                android:textStyle="bold"
+                android:singleLine="false"
+                android:ellipsize="end"
+                android:maxLines="3"/>
+    </LinearLayout>
 </FrameLayout>
