--- a/app/src/main/res/layout/image_card_view.xml
+++ b/app/src/main/res/layout/image_card_view.xml
@@ -11,6 +11,20 @@
         android:focusable="true"
         android:focusableInTouchMode="true">
 
+    <TextView
+            android:id="@+id/status_tv"
+            android:text=""
+            android:textColor="@color/orange"
+            android:background="@color/golden"
+            android:textSize="10sp"
+            android:layout_gravity="right"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/h_8"
+            android:padding="@dimen/h_4"
+            android:visibility="invisible"
+            android:maxLines="1"/>
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,12 +32,11 @@
             android:orientation="vertical">
 
         <TextView
-                android:id="@+id/status_tv"
+                android:id="@+id/status_tv2"
                 android:text=""
-                android:textColor="@color/white"
+                android:textColor="@color/orange"
                 android:background="@color/golden"
                 android:textSize="10sp"
-                android:textStyle="bold"
                 android:layout_gravity="right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
